[package]
name = "hd2-strats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdev = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
lazy_static = "1.4.0"
once_cell = "1.19.0"